Update help file

--- a/app/src/main/assets/ZipUtility3_Desc_EN_Short.htm
+++ b/app/src/main/assets/ZipUtility3_Desc_EN_Short.htm
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-<meta http-equiv=Content-Type content="text/html; charset=shift_jis">
+<meta http-equiv=Content-Type content="text/html; charset=utf-8">
 <meta name=Generator content="Microsoft Word 12 (filtered)">
 <title>Description</title>
 <style>
@@ -11,10 +11,10 @@
 	{font-family:Wingdings;
 	panose-1:5 0 0 0 0 0 0 0 0 0;}
 @font-face
-	{font-family:"‚l‚r –¾’©";
+	{font-family:"ï¼­ï¼³ æ˜æœ";
 	panose-1:2 2 6 9 4 2 5 8 3 4;}
 @font-face
-	{font-family:"‚l‚r ƒSƒVƒbƒN";
+	{font-family:"ï¼­ï¼³ ã‚´ã‚·ãƒƒã‚¯";
 	panose-1:2 11 6 9 7 2 5 8 2 4;}
 @font-face
 	{font-family:Century;
@@ -26,10 +26,10 @@
 	{font-family:"MS UI Gothic";
 	panose-1:2 11 6 0 7 2 5 8 2 4;}
 @font-face
-	{font-family:"\@‚l‚r ƒSƒVƒbƒN";
+	{font-family:"\@ï¼­ï¼³ ã‚´ã‚·ãƒƒã‚¯";
 	panose-1:2 11 6 9 7 2 5 8 2 4;}
 @font-face
-	{font-family:"\@‚l‚r –¾’©";
+	{font-family:"\@ï¼­ï¼³ æ˜æœ";
 	panose-1:2 2 6 9 4 2 5 8 3 4;}
 @font-face
 	{font-family:"\@MS UI Gothic";
@@ -43,7 +43,7 @@
 	font-size:10.5pt;
 	font-family:"Century","serif";}
 h1
-	{mso-style-link:"Œ©o‚µ 1 \(•¶š\)";
+	{mso-style-link:"è¦‹å‡ºã— 1 \(æ–‡å­—\)";
 	margin-top:0cm;
 	margin-right:0cm;
 	margin-bottom:0cm;
@@ -245,7 +245,7 @@ a:visited, span.MsoHyperlinkFollowed
 	{color:purple;
 	text-decoration:underline;}
 p.MsoDocumentMap, li.MsoDocumentMap, div.MsoDocumentMap
-	{mso-style-link:"Œ©o‚µƒ}ƒbƒv \(•¶š\)";
+	{mso-style-link:"è¦‹å‡ºã—ãƒãƒƒãƒ— \(æ–‡å­—\)";
 	margin:0cm;
 	margin-bottom:.0001pt;
 	text-align:justify;
@@ -270,7 +270,7 @@ p.MsoListParagraph, li.MsoListParagraph, div.MsoListParagraph
 	font-size:10.5pt;
 	font-family:"Century","serif";}
 p.148mm, li.148mm, div.148mm
-	{mso-style-name:"ƒXƒ^ƒCƒ‹ ¶ \:  14\.8 mm";
+	{mso-style-name:"ã‚¹ã‚¿ã‚¤ãƒ« å·¦ \:  14\.8 mm";
 	margin-top:0cm;
 	margin-right:0cm;
 	margin-bottom:0cm;
@@ -281,8 +281,8 @@ p.148mm, li.148mm, div.148mm
 	font-size:10.5pt;
 	font-family:"Century","serif";}
 p.2Century, li.2Century, div.2Century
-	{mso-style-name:"ƒXƒ^ƒCƒ‹ Œ©o‚µ 2 + \(‰p”š\) Century \(“ú\) ‚l‚r –¾’©";
-	mso-style-link:"ƒXƒ^ƒCƒ‹ Œ©o‚µ 2 + \(‰p”š\) Century \(“ú\) ‚l‚r –¾’© \(•¶š\)";
+	{mso-style-name:"ã‚¹ã‚¿ã‚¤ãƒ« è¦‹å‡ºã— 2 + \(è‹±æ•°å­—\) Century \(æ—¥\) ï¼­ï¼³ æ˜æœ";
+	mso-style-link:"ã‚¹ã‚¿ã‚¤ãƒ« è¦‹å‡ºã— 2 + \(è‹±æ•°å­—\) Century \(æ—¥\) ï¼­ï¼³ æ˜æœ \(æ–‡å­—\)";
 	margin:0cm;
 	margin-bottom:.0001pt;
 	text-align:justify;
@@ -291,11 +291,11 @@ p.2Century, li.2Century, div.2Century
 	font-size:14.0pt;
 	font-family:"Century","serif";}
 span.2Century0
-	{mso-style-name:"ƒXƒ^ƒCƒ‹ Œ©o‚µ 2 + \(‰p”š\) Century \(“ú\) ‚l‚r –¾’© \(•¶š\)";
-	mso-style-link:"ƒXƒ^ƒCƒ‹ Œ©o‚µ 2 + \(‰p”š\) Century \(“ú\) ‚l‚r –¾’©";
+	{mso-style-name:"ã‚¹ã‚¿ã‚¤ãƒ« è¦‹å‡ºã— 2 + \(è‹±æ•°å­—\) Century \(æ—¥\) ï¼­ï¼³ æ˜æœ \(æ–‡å­—\)";
+	mso-style-link:"ã‚¹ã‚¿ã‚¤ãƒ« è¦‹å‡ºã— 2 + \(è‹±æ•°å­—\) Century \(æ—¥\) ï¼­ï¼³ æ˜æœ";
 	font-family:"Century","serif";}
 p.318pt, li.318pt, div.318pt
-	{mso-style-name:"ƒXƒ^ƒCƒ‹ Œ©o‚µ 3 + ’i—‘O \:  18 pt";
+	{mso-style-name:"ã‚¹ã‚¿ã‚¤ãƒ« è¦‹å‡ºã— 3 + æ®µè½å‰ \:  18 pt";
 	margin-top:18.0pt;
 	margin-right:0cm;
 	margin-bottom:0cm;
@@ -308,7 +308,7 @@ p.318pt, li.318pt, div.318pt
 	font-family:"Arial","sans-serif";
 	text-decoration:underline;}
 p.21, li.21, div.21
-	{mso-style-name:"ƒXƒ^ƒCƒ‹ Œ©o‚µ 2 + ’i—‘O \:  1 s";
+	{mso-style-name:"ã‚¹ã‚¿ã‚¤ãƒ« è¦‹å‡ºã— 2 + æ®µè½å‰ \:  1 è¡Œ";
 	margin-top:18.0pt;
 	margin-right:0cm;
 	margin-bottom:0cm;
@@ -321,17 +321,17 @@ p.21, li.21, div.21
 	font-family:"Arial","sans-serif";
 	text-decoration:underline;}
 span.a
-	{mso-style-name:"Œ©o‚µƒ}ƒbƒv \(•¶š\)";
-	mso-style-link:Œ©o‚µƒ}ƒbƒv;
+	{mso-style-name:"è¦‹å‡ºã—ãƒãƒƒãƒ— \(æ–‡å­—\)";
+	mso-style-link:è¦‹å‡ºã—ãƒãƒƒãƒ—;
 	font-family:"MS UI Gothic";}
 span.1
-	{mso-style-name:"Œ©o‚µ 1 \(•¶š\)";
-	mso-style-link:"Œ©o‚µ 1";
+	{mso-style-name:"è¦‹å‡ºã— 1 \(æ–‡å­—\)";
+	mso-style-link:"è¦‹å‡ºã— 1";
 	font-family:"Arial","sans-serif";
 	text-decoration:underline;}
 p.10, li.10, div.10
-	{mso-style-name:ƒXƒ^ƒCƒ‹1;
-	mso-style-link:"ƒXƒ^ƒCƒ‹1 \(•¶š\)";
+	{mso-style-name:ã‚¹ã‚¿ã‚¤ãƒ«1;
+	mso-style-link:"ã‚¹ã‚¿ã‚¤ãƒ«1 \(æ–‡å­—\)";
 	margin-top:0cm;
 	margin-right:0cm;
 	margin-bottom:6.0pt;
@@ -342,11 +342,11 @@ p.10, li.10, div.10
 	font-size:12.0pt;
 	font-family:"Century","serif";}
 span.1105pt
-	{mso-style-name:"ƒXƒ^ƒCƒ‹ ƒXƒ^ƒCƒ‹1 + 10\.5 pt";
+	{mso-style-name:"ã‚¹ã‚¿ã‚¤ãƒ« ã‚¹ã‚¿ã‚¤ãƒ«1 + 10\.5 pt";
 	font-family:"Century","serif";}
 span.11
-	{mso-style-name:"ƒXƒ^ƒCƒ‹1 \(•¶š\)";
-	mso-style-link:ƒXƒ^ƒCƒ‹1;}
+	{mso-style-name:"ã‚¹ã‚¿ã‚¤ãƒ«1 \(æ–‡å­—\)";
+	mso-style-link:ã‚¹ã‚¿ã‚¤ãƒ«1;}
 .MsoChpDefault
 	{font-size:10.0pt;}
  /* Page Definitions */
@@ -398,8 +398,7 @@ for the Japanese file name(Automatic identification or manual)</p>
 style='font-family:Symbol'><img width=11 height=11
 src="ZipUtility3_Desc_EN_Short.files/image001.png" alt="*"><span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span></span>You
-can specify the file extensions to be stored without compression (the default
-is jpg, mpg, mp4, mp4, pdf, etc.)</p>
+can specify the file extensions to be stored without compression.</p>
 
 <p class=MsoListParagraph style='margin-left:36.0pt;text-indent:-18.0pt'><span
 style='font-family:Symbol'><img width=11 height=11
@@ -417,7 +416,7 @@ File Manager</p>
 style='font-family:Symbol'><img width=11 height=11
 src="ZipUtility3_Desc_EN_Short.files/image001.png" alt="*"><span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span></span>You
-can copy and cut files in the local folder(*1)</p>
+can copy and cut files in the local folder(<b><u>*1</u></b>)</p>
 
 <p class=MsoListParagraph style='margin-left:36.0pt;text-indent:-18.0pt'><span
 style='font-family:Symbol'><img width=11 height=11
@@ -431,7 +430,7 @@ src="ZipUtility3_Desc_EN_Short.files/image001.png" alt="*"><span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span></span>File
 name search in local and zip folders</p>
 
-<p class=MsoNormal style='margin-left:18.0pt'>*1 Local storage indicates
+<p class=MsoNormal style='margin-left:18.0pt'><b><u>*1</u></b> Local folder indicates
 internal storage, MicroSD and USB Flash.</p>
 
 <p class=MsoNormal>&nbsp;</p>
@@ -447,7 +446,7 @@ Description</h1>
 <p class=MsoNormal>Select an item and tap the icon to operate on the
 directory/file. Tap and hold the icon to display an explanation.</p>
 
-<p class=MsoNormal><img width=404 height=366 id="} 2"
+<p class=MsoNormal><img width=404 height=366 id="å›³ 2"
 src="ZipUtility3_Desc_EN_Short.files/image003.png"></p>
 
 <h2 style='margin-top:18.0pt'><u><span style='font-size:14.0pt'>2.1 Description
@@ -455,138 +454,113 @@ of the local folder icon</span></u></h2>
 
 <p class=10CxSpFirst style='margin-left:21.25pt;text-indent:-21.25pt;
 line-height:12.0pt'><span style='font-size:10.5pt'><img width=22 height=22
-id="} 4" src="ZipUtility3_Desc_EN_Short.files/image004.png"
-alt="context_button_clear"><span class=1105pt>&nbsp;Creating a Directory or
-File</span></span></p>
+id="å›³ 4" src="ZipUtility3_Desc_EN_Short.files/image004.png"
+alt="context_button_clear"></span><span class=1105pt><span style='font-size:
+10.5pt'>Â Creating a Directory or File</span></span></p>
 
 <p class=10CxSpMiddle style='margin-left:21.25pt;text-indent:-21.25pt;
 line-height:12.0pt'><span style='font-size:10.5pt'><img width=22 height=22
-id="} 5" src="ZipUtility3_Desc_EN_Short.files/image005.png"
-alt="context_button_share_dark"><span class=1105pt>&nbsp;Share the selected
-item.</span></span></p>
+id="å›³ 5" src="ZipUtility3_Desc_EN_Short.files/image005.png"
+alt="context_button_share_dark"></span><span class=1105pt><span
+style='font-size:10.5pt'>Â Share the selected item.</span></span></p>
 
 <p class=10CxSpMiddle style='margin-left:21.25pt;text-indent:-21.25pt;
 line-height:12.0pt'><span style='font-size:10.5pt'><img width=22 height=22
-id="} 6" src="ZipUtility3_Desc_EN_Short.files/image006.png"
-alt="context_button_rename"><span class=1105pt>&nbsp;Rename the selected item.</span></span></p>
+id="å›³ 6" src="ZipUtility3_Desc_EN_Short.files/image006.png"
+alt="context_button_rename"></span><span class=1105pt><span style='font-size:
+10.5pt'>Â Rename the selected item.</span></span></p>
 
 <p class=10CxSpMiddle style='margin-left:21.25pt;text-indent:-21.25pt;
 line-height:12.0pt'><span style='font-size:10.5pt'><img width=22 height=22
-id="} 7" src="ZipUtility3_Desc_EN_Short.files/image007.png"
-alt="context_button_paste"><span class=1105pt>&nbsp;Paste a copy or cut item
-(the cut item will be deleted when the pasting is complete)</span></span></p>
+id="å›³ 7" src="ZipUtility3_Desc_EN_Short.files/image007.png"
+alt="context_button_paste"></span><span class=1105pt><span style='font-size:
+10.5pt'>Â Paste a copy or cut item (the cut item will be deleted when the
+pasting is complete)</span></span></p>
 
 <p class=10CxSpMiddle style='margin-left:21.25pt;text-indent:-21.25pt;
 line-height:12.0pt'><span style='font-size:10.5pt'><img width=19 height=19
-src="ZipUtility3_Desc_EN_Short.files/image008.png" alt="context_button_copy"><span
-class=1105pt>&nbsp;Copy the selected items.</span></span></p>
+src="ZipUtility3_Desc_EN_Short.files/image008.png" alt="context_button_copy"></span><span
+class=1105pt><span style='font-size:10.5pt'>Â Copy the selected items.</span></span></p>
 
 <p class=10CxSpMiddle style='margin-left:21.25pt;text-indent:-21.25pt;
 line-height:12.0pt'><span style='font-size:10.5pt'><img width=22 height=22
-src="ZipUtility3_Desc_EN_Short.files/image009.png" alt="context_button_cut"><span
-class=1105pt>&nbsp;Cut the selected items.</span></span></p>
+src="ZipUtility3_Desc_EN_Short.files/image009.png" alt="context_button_cut"></span><span
+class=1105pt><span style='font-size:10.5pt'>Â Cut the selected items.</span></span></p>
 
 <p class=10CxSpMiddle style='margin-left:21.25pt;text-indent:-21.25pt;
 line-height:12.0pt'><span style='font-size:10.5pt'><img width=22 height=22
-id="} 10" src="ZipUtility3_Desc_EN_Short.files/image010.png"
-alt="context_button_archive"><span class=1105pt>&nbsp;Compress the selected
-items.</span></span></p>
+id="å›³ 10" src="ZipUtility3_Desc_EN_Short.files/image010.png"
+alt="context_button_archive"></span><span class=1105pt><span style='font-size:
+10.5pt'>Â Compress the selected items.</span></span></p>
 
 <p class=10CxSpMiddle style='margin-left:21.25pt;text-indent:-21.25pt;
 line-height:12.0pt'><span style='font-size:10.5pt'><img width=22 height=22
-src="ZipUtility3_Desc_EN_Short.files/image011.png" alt="context_button_trash"><span
-class=1105pt>&nbsp;Removes the selected item.</span></span></p>
+src="ZipUtility3_Desc_EN_Short.files/image011.png" alt="context_button_trash"></span><span
+class=1105pt><span style='font-size:10.5pt'>Â Removes the selected item.</span></span></p>
 
 <p class=10CxSpMiddle style='margin-left:21.25pt;text-indent:-21.25pt;
 line-height:12.0pt'><span class=1105pt><span style='font-size:10.5pt'><img
 width=23 height=23 src="ZipUtility3_Desc_EN_Short.files/image012.png"
-alt="context_button_select_all">&nbsp;Select All.</span></span></p>
+alt="context_button_select_all"></span></span><span class=1105pt><span
+style='font-size:10.5pt'>Â Select All.</span></span></p>
 
 <p class=10CxSpLast style='margin-left:21.25pt;text-indent:-21.25pt;line-height:
 12.0pt'><span style='font-size:10.5pt'><img width=22 height=22
 src="ZipUtility3_Desc_EN_Short.files/image013.png"
-alt="context_button_unselect_all"><span class=1105pt>&nbsp;Deselect everything.</span></span></p>
+alt="context_button_unselect_all"></span><span class=1105pt><span
+style='font-size:10.5pt'>Â Deselect everything.</span></span></p>
 
 <p class=MsoNormal>&nbsp;</p>
 
 <h2 style='margin-top:18.0pt'><u><span style='font-size:14.0pt'>2.2 Description
 of the ZIP folder icon</span></u></h2>
 
-<p class=MsoNormal><span class=1105pt><img width=23 height=23 id="} 18"
-src="ZipUtility3_Desc_EN_Short.files/image014.png" alt="context_button_clear">&nbsp;Create
+<p class=MsoNormal><span class=1105pt><img width=23 height=23 id="å›³ 18"
+src="ZipUtility3_Desc_EN_Short.files/image014.png" alt="context_button_clear">Â Create
 a ZIP file</span></p>
 
-<p class=MsoNormal><img width=22 height=22 id="} 16"
+<p class=MsoNormal><img width=22 height=22 id="å›³ 16"
 src="ZipUtility3_Desc_EN_Short.files/image015.png" alt="context_button_open"><span
-class=1105pt>&nbsp;Open the ZIP file</span></p>
+class=1105pt>Â Open the ZIP file</span></p>
 
 <p class=MsoNormal style='margin-left:21.3pt;text-indent:-21.3pt'><img
-width=22 height=22 id="} 20" src="ZipUtility3_Desc_EN_Short.files/image007.png"
-alt="context_button_paste"><span class=1105pt>&nbsp;Paste a copy or clipped
-item (the clipped item will be deleted when the pasting is complete)</span></p>
+width=22 height=22 id="å›³ 20" src="ZipUtility3_Desc_EN_Short.files/image007.png"
+alt="context_button_paste"><span class=1105pt>Â Paste a copy or clipped item
+(the clipped item will be deleted when the pasting is complete)</span></p>
 
 <p class=10CxSpFirst style='margin-left:21.25pt;text-indent:-21.25pt;
 line-height:12.0pt'><span style='font-size:10.5pt'><img width=19 height=19
-id="} 8" src="ZipUtility3_Desc_EN_Short.files/image008.png"
-alt="context_button_copy"><span class=1105pt>&nbsp;Copy the selected items.</span></span></p>
+id="å›³ 8" src="ZipUtility3_Desc_EN_Short.files/image008.png"
+alt="context_button_copy"></span><span class=1105pt><span style='font-size:
+10.5pt'>Â Copy the selected items.</span></span></p>
 
 <p class=10CxSpLast style='margin-left:21.25pt;text-indent:-21.25pt;line-height:
-12.0pt'><span style='font-size:10.5pt'><img width=22 height=22 id="} 9"
-src="ZipUtility3_Desc_EN_Short.files/image009.png" alt="context_button_cut"><span
-class=1105pt>&nbsp;Cut the selected items.</span></span></p>
+12.0pt'><span style='font-size:10.5pt'><img width=22 height=22 id="å›³ 9"
+src="ZipUtility3_Desc_EN_Short.files/image009.png" alt="context_button_cut"></span><span
+class=1105pt><span style='font-size:10.5pt'>Â Cut the selected items.</span></span></p>
 
-<p class=MsoNormal><span class=1105pt><img width=22 height=22 id="} 17"
-src="ZipUtility3_Desc_EN_Short.files/image016.png">&nbsp;Extract the selected
-items</span></p>
+<p class=MsoNormal><span class=1105pt><img width=22 height=22 id="å›³ 17"
+src="ZipUtility3_Desc_EN_Short.files/image016.png">Â Extract the selected items</span></p>
 
 <p class=10CxSpFirst style='margin-left:21.25pt;text-indent:-21.25pt;
 line-height:12.0pt'><span style='font-size:10.5pt'><img width=22 height=22
-id="} 11" src="ZipUtility3_Desc_EN_Short.files/image011.png"
-alt="context_button_trash"><span class=1105pt>&nbsp;Removes the selected item.</span></span></p>
+id="å›³ 11" src="ZipUtility3_Desc_EN_Short.files/image011.png"
+alt="context_button_trash"></span><span class=1105pt><span style='font-size:
+10.5pt'>Â Removes the selected item.</span></span></p>
 
 <p class=10CxSpMiddle style='margin-left:21.25pt;text-indent:-21.25pt;
 line-height:12.0pt'><span class=1105pt><span style='font-size:10.5pt'><img
-width=23 height=23 id="} 13" src="ZipUtility3_Desc_EN_Short.files/image012.png"
-alt="context_button_select_all">&nbsp;Select All.</span></span></p>
+width=23 height=23 id="å›³ 13" src="ZipUtility3_Desc_EN_Short.files/image012.png"
+alt="context_button_select_all"></span></span><span class=1105pt><span
+style='font-size:10.5pt'>Â Select All.</span></span></p>
 
 <p class=10CxSpLast style='margin-left:21.25pt;text-indent:-21.25pt;line-height:
-12.0pt'><span style='font-size:10.5pt'><img width=22 height=22 id="} 12"
+12.0pt'><span style='font-size:10.5pt'><img width=22 height=22 id="å›³ 12"
 src="ZipUtility3_Desc_EN_Short.files/image013.png"
-alt="context_button_unselect_all"><span class=1105pt>&nbsp;Deselect everything.</span></span></p>
+alt="context_button_unselect_all"></span><span class=1105pt><span
+style='font-size:10.5pt'>Â Deselect everything.</span></span></p>
 
 <p class=MsoNormal>&nbsp;</p>
-
-<h1 style='margin-top:18.0pt'><span style='text-decoration:none'>3.<span
-style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp; </span></span>Library</h1>
-
-<p class=MsoListParagraph style='margin-left:21.3pt;text-indent:-21.3pt;
-page-break-after:avoid'><span style='font-family:Symbol'><img width=11
-height=11 src="ZipUtility3_Desc_EN_Short.files/image001.png" alt="*"><span
-style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span><a href="https://code.google.com/archive/p/juniversalchardet/">juniversalchardet
-1.0.3</a></p>
-
-<p class=MsoListParagraph style='margin-left:21.3pt;text-indent:-21.3pt;
-page-break-after:avoid'><span style='font-family:Symbol'><img width=11
-height=11 src="ZipUtility3_Desc_EN_Short.files/image001.png" alt="*"><span
-style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span><a href="http://www.lingala.net/zip4j.html">Zip4J 2.2.3</a></p>
-
-<p class=MsoListParagraph style='margin-left:21.3pt;text-indent:-21.3pt;
-page-break-after:avoid'><span style='font-family:Symbol'><img width=11
-height=11 src="ZipUtility3_Desc_EN_Short.files/image001.png" alt="*"><span
-style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span><a
-href="https://commons.apache.org/proper/commons-compress/index.html">Apache
-Commons Compress 1.20</a></p>
-
-<p class=MsoListParagraph style='margin-left:21.3pt;text-indent:-21.3pt;
-page-break-after:avoid'><span style='font-family:Symbol'><img width=11
-height=11 src="ZipUtility3_Desc_EN_Short.files/image001.png" alt="*"><span
-style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span><a href="https://tukaani.org/xz/java.html">XZ-1.8</a></p>
-
-<p class=MsoNormal style='page-break-after:avoid'>&nbsp;</p>
 
 </div>
 
