--- a/app/src/main/assets/ZipUtility3_Desc_FR_Short.htm
+++ b/app/src/main/assets/ZipUtility3_Desc_FR_Short.htm
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-<meta http-equiv=Content-Type content="text/html; charset=shift_jis">
+<meta http-equiv=Content-Type content="text/html; charset=utf-8">
 <meta name=Generator content="Microsoft Word 12 (filtered)">
 <title>Description</title>
 <style>
@@ -11,10 +11,10 @@
 	{font-family:Wingdings;
 	panose-1:5 0 0 0 0 0 0 0 0 0;}
 @font-face
-	{font-family:"‚l‚r –¾’©";
+	{font-family:"ï¼­ï¼³ æ˜æœ";
 	panose-1:2 2 6 9 4 2 5 8 3 4;}
 @font-face
-	{font-family:"‚l‚r ƒSƒVƒbƒN";
+	{font-family:"ï¼­ï¼³ ã‚´ã‚·ãƒƒã‚¯";
 	panose-1:2 11 6 9 7 2 5 8 2 4;}
 @font-face
 	{font-family:Century;
@@ -26,10 +26,10 @@
 	{font-family:"MS UI Gothic";
 	panose-1:2 11 6 0 7 2 5 8 2 4;}
 @font-face
-	{font-family:"\@‚l‚r ƒSƒVƒbƒN";
+	{font-family:"\@ï¼­ï¼³ ã‚´ã‚·ãƒƒã‚¯";
 	panose-1:2 11 6 9 7 2 5 8 2 4;}
 @font-face
-	{font-family:"\@‚l‚r –¾’©";
+	{font-family:"\@ï¼­ï¼³ æ˜æœ";
 	panose-1:2 2 6 9 4 2 5 8 3 4;}
 @font-face
 	{font-family:"\@MS UI Gothic";
@@ -244,7 +244,7 @@ a:visited, span.MsoHyperlinkFollowed
 	{color:purple;
 	text-decoration:underline;}
 p.MsoDocumentMap, li.MsoDocumentMap, div.MsoDocumentMap
-	{mso-style-link:"Œ©o‚µƒ}ƒbƒv \(•¶š\)";
+	{mso-style-link:"è¦‹å‡ºã—ãƒãƒƒãƒ— \(æ–‡å­—\)";
 	margin:0cm;
 	margin-bottom:.0001pt;
 	text-align:justify;
@@ -269,7 +269,7 @@ p.MsoListParagraph, li.MsoListParagraph, div.MsoListParagraph
 	font-size:10.5pt;
 	font-family:"Century","serif";}
 p.148mm, li.148mm, div.148mm
-	{mso-style-name:"ƒXƒ^ƒCƒ‹ ¶ \:  14\.8 mm";
+	{mso-style-name:"ã‚¹ã‚¿ã‚¤ãƒ« å·¦ \:  14\.8 mm";
 	margin-top:0cm;
 	margin-right:0cm;
 	margin-bottom:0cm;
@@ -280,8 +280,8 @@ p.148mm, li.148mm, div.148mm
 	font-size:10.5pt;
 	font-family:"Century","serif";}
 p.2Century, li.2Century, div.2Century
-	{mso-style-name:"ƒXƒ^ƒCƒ‹ Œ©o‚µ 2 + \(‰p”š\) Century \(“ú\) ‚l‚r –¾’©";
-	mso-style-link:"ƒXƒ^ƒCƒ‹ Œ©o‚µ 2 + \(‰p”š\) Century \(“ú\) ‚l‚r –¾’© \(•¶š\)";
+	{mso-style-name:"ã‚¹ã‚¿ã‚¤ãƒ« è¦‹å‡ºã— 2 + \(è‹±æ•°å­—\) Century \(æ—¥\) ï¼­ï¼³ æ˜æœ";
+	mso-style-link:"ã‚¹ã‚¿ã‚¤ãƒ« è¦‹å‡ºã— 2 + \(è‹±æ•°å­—\) Century \(æ—¥\) ï¼­ï¼³ æ˜æœ \(æ–‡å­—\)";
 	margin:0cm;
 	margin-bottom:.0001pt;
 	text-align:justify;
@@ -290,11 +290,11 @@ p.2Century, li.2Century, div.2Century
 	font-size:14.0pt;
 	font-family:"Century","serif";}
 span.2Century0
-	{mso-style-name:"ƒXƒ^ƒCƒ‹ Œ©o‚µ 2 + \(‰p”š\) Century \(“ú\) ‚l‚r –¾’© \(•¶š\)";
-	mso-style-link:"ƒXƒ^ƒCƒ‹ Œ©o‚µ 2 + \(‰p”š\) Century \(“ú\) ‚l‚r –¾’©";
+	{mso-style-name:"ã‚¹ã‚¿ã‚¤ãƒ« è¦‹å‡ºã— 2 + \(è‹±æ•°å­—\) Century \(æ—¥\) ï¼­ï¼³ æ˜æœ \(æ–‡å­—\)";
+	mso-style-link:"ã‚¹ã‚¿ã‚¤ãƒ« è¦‹å‡ºã— 2 + \(è‹±æ•°å­—\) Century \(æ—¥\) ï¼­ï¼³ æ˜æœ";
 	font-family:"Century","serif";}
 p.318pt, li.318pt, div.318pt
-	{mso-style-name:"ƒXƒ^ƒCƒ‹ Œ©o‚µ 3 + ’i—‘O \:  18 pt";
+	{mso-style-name:"ã‚¹ã‚¿ã‚¤ãƒ« è¦‹å‡ºã— 3 + æ®µè½å‰ \:  18 pt";
 	margin-top:18.0pt;
 	margin-right:0cm;
 	margin-bottom:0cm;
@@ -307,7 +307,7 @@ p.318pt, li.318pt, div.318pt
 	font-family:"Arial","sans-serif";
 	text-decoration:underline;}
 p.21, li.21, div.21
-	{mso-style-name:"ƒXƒ^ƒCƒ‹ Œ©o‚µ 2 + ’i—‘O \:  1 s";
+	{mso-style-name:"ã‚¹ã‚¿ã‚¤ãƒ« è¦‹å‡ºã— 2 + æ®µè½å‰ \:  1 è¡Œ";
 	margin-top:18.0pt;
 	margin-right:0cm;
 	margin-bottom:0cm;
@@ -320,8 +320,8 @@ p.21, li.21, div.21
 	font-family:"Arial","sans-serif";
 	text-decoration:underline;}
 span.a
-	{mso-style-name:"Œ©o‚µƒ}ƒbƒv \(•¶š\)";
-	mso-style-link:Œ©o‚µƒ}ƒbƒv;
+	{mso-style-name:"è¦‹å‡ºã—ãƒãƒƒãƒ— \(æ–‡å­—\)";
+	mso-style-link:è¦‹å‡ºã—ãƒãƒƒãƒ—;
 	font-family:"MS UI Gothic";}
 .MsoChpDefault
 	{font-size:10.0pt;}
@@ -347,50 +347,49 @@ ul
 <div class=WordSection1 style='layout-grid:18.0pt'>
 
 <h1 style='margin-top:18.0pt'><span style='text-decoration:none'>1.<span
-style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp; </span></span>Capacit&eacute;</h1>
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp; </span></span>CapacitÃ©</h1>
 
-<p class=MsoNormal><span style='font-size:12.0pt'>C'est l'application qui &eacute;dite
-et extrait le fichier Zip, et la protection par mot de passe Zip peut &eacute;galement
-&ecirc;tre utilis&eacute;e.</span></p>
-
-<p class=MsoListParagraph style='margin-left:36.0pt;text-indent:-18.0pt'><span
-style='font-family:Symbol'><img width=11 height=11
-src="ZipUtility3_Desc_FR_Short.files/image001.png" alt="*"><span
-style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span></span>Cr&eacute;er,
-d&eacute;compresser et visualiser des fichiers Zip.</p>
+<p class=MsoNormal><span style='font-size:12.0pt'>C'est l'application qui Ã©dite
+et extrait le fichier Zip, et la protection par mot de passe Zip peut Ã©galement
+Ãªtre utilisÃ©e.</span></p>
 
 <p class=MsoListParagraph style='margin-left:36.0pt;text-indent:-18.0pt'><span
 style='font-family:Symbol'><img width=11 height=11
 src="ZipUtility3_Desc_FR_Short.files/image001.png" alt="*"><span
-style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span></span>D&eacute;compresser
-et cr&eacute;er des fichiers Zip prot&eacute;g&eacute;s par un mot de passe (norme Zip, cryptage
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span></span>CrÃ©er,
+dÃ©compresser et visualiser des fichiers Zip.</p>
+
+<p class=MsoListParagraph style='margin-left:36.0pt;text-indent:-18.0pt'><span
+style='font-family:Symbol'><img width=11 height=11
+src="ZipUtility3_Desc_FR_Short.files/image001.png" alt="*"><span
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span></span>DÃ©compresser
+et crÃ©er des fichiers Zip protÃ©gÃ©s par un mot de passe (norme Zip, cryptage
 AES128 et AES256 bits)</p>
 
 <p class=MsoListParagraph style='margin-left:36.0pt;text-indent:-18.0pt'><span
 style='font-family:Symbol'><img width=11 height=11
 src="ZipUtility3_Desc_FR_Short.files/image001.png" alt="*"><span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span></span>Les
-extensions de fichiers peuvent &ecirc;tre sp&eacute;cifi&eacute;es sans compression (les valeurs
-par d&eacute;faut sont jpg, mpg, mp4, mp4, pdf, etc.)</p>
+extensions de fichiers peuvent Ãªtre spÃ©cifiÃ©es sans compression. </p>
 
 <p class=MsoListParagraph style='margin-left:36.0pt;text-indent:-18.0pt'><span
 style='font-family:Symbol'><img width=11 height=11
 src="ZipUtility3_Desc_FR_Short.files/image001.png" alt="*"><span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span></span>Prend
-en charge la lecture et la sauvegarde &agrave; partir de MicroSD/USB Flash</p>
+en charge la lecture et la sauvegarde Ã  partir de MicroSD/USB Flash</p>
 
 <p class=MsoListParagraph style='margin-left:36.0pt;text-indent:-18.0pt'><span
 style='font-family:Symbol'><img width=11 height=11
 src="ZipUtility3_Desc_FR_Short.files/image001.png" alt="*"><span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span></span>Supporte
-les noms de fichiers japonais (identification automatique et sp&eacute;cification
+les noms de fichiers japonais (identification automatique et spÃ©cification
 directe possible)</p>
 
 <p class=MsoListParagraph style='margin-left:36.0pt;text-indent:-18.0pt'><span
 style='font-family:Symbol'><img width=11 height=11
 src="ZipUtility3_Desc_FR_Short.files/image001.png" alt="*"><span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span></span>Fonctionne
-avec des applications externes pour r&eacute;f&eacute;rencer d'autres formats de fichiers
+avec des applications externes pour rÃ©fÃ©rencer d'autres formats de fichiers
 populaires</p>
 
 <p class=MsoListParagraph style='margin-left:36.0pt;text-indent:-18.0pt'><span
@@ -403,7 +402,7 @@ de fichiers simple</p>
 style='font-family:Symbol'><img width=11 height=11
 src="ZipUtility3_Desc_FR_Short.files/image001.png" alt="*"><span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span></span>Vous
-pouvez copier et couper des fichiers dans le dossier local(*1).</p>
+pouvez copier et couper des fichiers dans le dossier local(<b><u>*1</u></b>).</p>
 
 <p class=MsoListParagraph style='margin-left:36.0pt;text-indent:-18.0pt'><span
 style='font-family:Symbol'><img width=11 height=11
@@ -417,48 +416,16 @@ src="ZipUtility3_Desc_FR_Short.files/image001.png" alt="*"><span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span></span>Recherche
 de nom de fichier dans les dossiers locaux et zip</p>
 
-<p class=MsoNormal style='margin-left:18.0pt'>*1 Le stockage local indique le
-stockage interne, le MicroSD et le Flash USB.</p>
+<p class=MsoNormal style='margin-left:18.0pt'><b><u>*1</u></b> Le stockage
+local indique le stockage interne, le MicroSD et le Flash USB.</p>
 
 <p class=MsoNormal style='margin-left:18.0pt'>&nbsp;</p>
 
 <p class=MsoNormal><span style='font-size:12.0pt'>Touchez un fichier ZIP dans
 un simple gestionnaire de fichiers ou dans un autre gestionnaire de fichiers et
-s&eacute;lectionnez ZipUtility3 dans l'application que vous souhaitez ouvrir.</span></p>
+sÃ©lectionnez ZipUtility3 dans l'application que vous souhaitez ouvrir.</span></p>
 
 <p class=MsoNormal>&nbsp;</p>
-
-<h1 style='margin-top:18.0pt'><span style='text-decoration:none'>2.<span
-style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp; </span></span>Biblioth&egrave;que</h1>
-
-<p class=MsoListParagraph style='margin-left:21.3pt;text-indent:-21.3pt;
-page-break-after:avoid'><span style='font-family:Symbol'><img width=11
-height=11 src="ZipUtility3_Desc_FR_Short.files/image001.png" alt="*"><span
-style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span><a href="https://code.google.com/archive/p/juniversalchardet/">juniversalchardet
-1.0.3</a></p>
-
-<p class=MsoListParagraph style='margin-left:21.3pt;text-indent:-21.3pt;
-page-break-after:avoid'><span style='font-family:Symbol'><img width=11
-height=11 src="ZipUtility3_Desc_FR_Short.files/image001.png" alt="*"><span
-style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span><a href="http://www.lingala.net/zip4j.html">Zip4J 2.2.3</a></p>
-
-<p class=MsoListParagraph style='margin-left:21.3pt;text-indent:-21.3pt;
-page-break-after:avoid'><span style='font-family:Symbol'><img width=11
-height=11 src="ZipUtility3_Desc_FR_Short.files/image001.png" alt="*"><span
-style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span><a
-href="https://commons.apache.org/proper/commons-compress/index.html">Apache
-Commons Compress 1.20</a></p>
-
-<p class=MsoListParagraph style='margin-left:21.3pt;text-indent:-21.3pt;
-page-break-after:avoid'><span style='font-family:Symbol'><img width=11
-height=11 src="ZipUtility3_Desc_FR_Short.files/image001.png" alt="*"><span
-style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span><a href="https://tukaani.org/xz/java.html">XZ-1.8</a></p>
-
-<p class=MsoNormal style='page-break-after:avoid'>&nbsp;</p>
 
 </div>
 
